src/objects/blng__RevenueAgreement__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountRevenueAgreements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>ContractRevenueAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipName>OrderProductRevenueAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>OrderRevenueAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TotalAllocatedRevenueAmtBillings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Allocation Amt(Billings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalAllocatedRevenueAmtBookings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Allocation Amt(Bookings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueBillings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Transaction Amt(Billings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueBookings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Transaction Amt(Bookings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueExpectedAmtBillings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Expected Amt(Billings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueExpectedAmtBookings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Expected Amt(Bookings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueLiabilityAmtBillings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Liability Amt(Billings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueLiabilityAmtBookings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Liability Amt(Bookings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueMostLikelyAmtBillings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Most Likely Amt(Billings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueMostLikelyAmtBookings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Revenue Most Likely Amt(Bookings)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Agreement</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Revenue Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>